--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,26 @@
           <skipTests>true</skipTests>
         </configuration>
       </plugin>
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-dependency-plugin</artifactId>
+	<version>2.10</version>
+	<executions>
+	  <execution>
+	    <id>copy-dependencies</id>
+	    <phase>package</phase>
+	    <goals>
+	      <goal>copy-dependencies</goal>
+	    </goals>
+	    <configuration>
+	      <outputDirectory>${project.basedir}/lib</outputDirectory>
+	      <overWriteReleases>false</overWriteReleases>
+	      <overWriteSnapshots>false</overWriteSnapshots>
+	      <overWriteIfNewer>true</overWriteIfNewer>
+	    </configuration>
+          </execution>
+	</executions>
+      </plugin>
     </plugins>
     <resources>
       <resource>
