--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,134 @@
       </snapshots>
     </repository>
   </repositories>
+  <profiles>
+    <profile>
+      <id>win</id>
+      <activation>
+      	<os>
+          <family>Windows</family>
+      	</os>
+      </activation>
+      <properties>
+        <osarch>windows-x86_64</osarch>
+      </properties>
+    </profile>
+    <profile>
+      <id>mac</id>
+      <activation>
+      	<os>
+          <family>mac</family>
+      	</os>
+      </activation>
+      <properties>
+        <osarch>apple-x86_64</osarch>
+      </properties>
+    </profile>
+    <profile>
+      <id>linux_arm</id>
+      <activation>
+      	<os>
+          <family>unix</family>
+          <arch>arm</arch>
+          <name>!mac os x</name>  <!--https://issues.apache.org/jira/browse/MNG-4983-->
+      	</os>
+      </activation>
+      <properties>
+        <osarch>linux-arm</osarch>
+      </properties>
+    </profile>
+    <profile>
+      <id>linux</id>
+      <activation>
+      	<os>
+          <family>unix</family>
+          <name>!mac os x</name> <!--https://issues.apache.org/jira/browse/MNG-4983-->
+      	</os>
+      </activation>
+      <properties>
+        <osarch>linux-x86_64</osarch>
+      </properties>
+    </profile>
+    <profile>
+      <id>cpu</id>
+      <activation>
+        <property>
+          <name>cpu</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>3.0.2</version>
+            <executions>
+              <execution>
+                <id>build_cpu_native_jar</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>jar</goal>
+                </goals>
+                <configuration>
+                  <classesDirectory>src/main/resources</classesDirectory>
+                  <classifier>cpu-${osarch}</classifier>
+                  <includes>
+                    <include>lib/*bidmachale*</include>
+                  </includes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>dependcpu</id>
+      <activation>
+        <property>
+          <name>!cpu</name>
+        </property>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>${project.groupId}</groupId>
+          <artifactId>${project.artifactId}</artifactId>
+          <version>${project.version}</version>
+          <classifier>cpu-${osarch}</classifier>
+        </dependency>
+      </dependencies>
+      <build>
+	<plugins>
+	  <plugin>
+	    <groupId>org.apache.maven.plugins</groupId>
+	    <artifactId>maven-dependency-plugin</artifactId>
+	    <version>2.10</version>
+	    <executions>
+	      <execution>
+		<id>unpack-resources</id>
+		<phase>package</phase>
+		<goals>
+		  <goal>unpack</goal>
+		</goals>
+		<configuration>
+		  <artifactItems>
+		    <artifactItem>
+		      <groupId>BIDMach</groupId>
+		      <artifactId>BIDMach</artifactId>
+		      <classifier>cpu-${osarch}</classifier>
+		      <version>${project.version}</version>
+		      <includes>**/*.exe</includes>
+		      <outputDirectory>${project.basedir}</outputDirectory>
+		    </artifactItem>
+		  </artifactItems>
+		</configuration>
+	      </execution>
+	    </executions>
+	  </plugin>
+	</plugins>
+      </build>
+    </profile>
+  </profiles>
   <dependencies>
     <dependency>
       <groupId>BIDMach</groupId>
@@ -127,15 +255,6 @@
 	</configuration>
       </plugin>  
     </plugins>
-    <resources>
-      <resource>
-        <targetPath>lib/</targetPath>
-        <directory>src/main/resources/lib/</directory>
-        <excludes>
-          <exclude>**/*.jar</exclude>
-        </excludes>
-      </resource>
-    </resources>
   </build>
   <distributionManagement>
     <repository>
