--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,15 @@
   <groupId>BIDMach</groupId>
   <artifactId>BIDMachRL</artifactId>
   <packaging>jar</packaging>
-  <version>2.0.13-cuda8.0beta</version>
+  <version>2.0.14beta</version>
   <name>BIDMachRL</name>
   <description>Reinforcement Learning for BIDMach</description>
   <properties>
     <scala.version>2.11.7</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
+    <bidmach.version>2.0.13-cuda8.0beta</bidmach.version>
     <jline.version>${scala.binary.version}</jline.version>
+    <libgdx.version>1.9.8</libgdx.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <repositories>
@@ -147,7 +149,7 @@
 		  <artifactItems>
 		    <artifactItem>
 		      <groupId>BIDMach</groupId>
-		      <artifactId>BIDMach</artifactId>
+		      <artifactId>BIDMachRL</artifactId>
 		      <classifier>cpu-${osarch}</classifier>
 		      <version>${project.version}</version>
 		      <includes>**/*.exe</includes>
@@ -166,27 +168,60 @@
     <dependency>
       <groupId>BIDMach</groupId>
       <artifactId>BIDMach</artifactId>
-      <version>${project.version}</version>
+      <version>${bidmach.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx</artifactId>
+      <version>${libgdx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx-platform</artifactId>
+      <classifier>natives-desktop</classifier>
+      <version>${libgdx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx-backend-headless</artifactId>
+      <version>${libgdx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.badlogicgames.gdx</groupId>
+      <artifactId>gdx-backend-lwjgl3</artifactId>
+      <version>${libgdx.version}</version>
     </dependency>
     <dependency>
       <groupId>com.badlogicgames.gdx</groupId>
       <artifactId>gdx-bullet</artifactId>
-      <version>1.9.6</version>
+      <version>${libgdx.version}</version>
     </dependency>
     <dependency>
       <groupId>com.badlogicgames.gdx</groupId>
       <artifactId>gdx-bullet-platform</artifactId>
-      <version>1.9.6</version>
+      <classifier>natives-desktop</classifier>
+      <version>${libgdx.version}</version>
     </dependency>
     <dependency>
       <groupId>com.badlogicgames.gdx</groupId>
       <artifactId>gdx-box2d</artifactId>
-      <version>1.9.6</version>
+      <version>${libgdx.version}</version>
     </dependency>
     <dependency>
       <groupId>com.badlogicgames.gdx</groupId>
       <artifactId>gdx-box2d-platform</artifactId>
-      <version>1.9.6</version>
+      <classifier>natives-desktop</classifier>
+      <version>${libgdx.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>BIDMach</groupId>
+      <artifactId>gdx-test-assets</artifactId>
+      <version>1.9.8</version>
+    </dependency>
+    <dependency>
+      <groupId>BIDMach</groupId>
+      <artifactId>scr-client-java</artifactId>
+      <version>1.3.1</version>
     </dependency>
   </dependencies>
   <build>
