--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,14 @@
   <groupId>BIDMach</groupId>
   <artifactId>BIDMachRL</artifactId>
   <packaging>jar</packaging>
-  <version>2.0.15.beta</version>
+  <version>2.0.16</version>
   <name>BIDMachRL</name>
   <description>Reinforcement Learning for BIDMach</description>
   <properties>
-    <scala.version>2.11.7</scala.version>
+    <nativeVersion>2.0.0</nativeVersion>
+    <bidmach.version>2.1.13-cuda9.2</bidmach.version>
+    <scala.version>2.11.11</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
-    <bidmach.version>2.0.15-cuda8.0beta</bidmach.version>
     <jline.version>${scala.binary.version}</jline.version>
     <libgdx.version>1.9.8</libgdx.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -84,87 +85,14 @@
         <osarch>linux-x86_64</osarch>
       </properties>
     </profile>
-    <profile>
-      <id>cpu</id>
-      <activation>
-        <property>
-          <name>cpu</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-jar-plugin</artifactId>
-            <version>3.0.2</version>
-            <executions>
-              <execution>
-                <id>build_cpu_native_jar</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-                <configuration>
-                  <classesDirectory>src/main/resources</classesDirectory>
-                  <classifier>cpu-${osarch}</classifier>
-                  <includes>
-                    <include>lib/*bidmachale*</include>
-                  </includes>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>dependcpu</id>
-      <activation>
-        <property>
-          <name>!cpu</name>
-        </property>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>${project.artifactId}</artifactId>
-          <version>${project.version}</version>
-          <classifier>cpu-${osarch}</classifier>
-        </dependency>
-      </dependencies>
-      <build>
-	<plugins>
-	  <plugin>
-	    <groupId>org.apache.maven.plugins</groupId>
-	    <artifactId>maven-dependency-plugin</artifactId>
-	    <version>2.10</version>
-	    <executions>
-	      <execution>
-		<id>unpack-resources</id>
-		<phase>package</phase>
-		<goals>
-		  <goal>unpack</goal>
-		</goals>
-		<configuration>
-		  <artifactItems>
-		    <artifactItem>
-		      <groupId>BIDMach</groupId>
-		      <artifactId>BIDMachRL</artifactId>
-		      <classifier>cpu-${osarch}</classifier>
-		      <version>${project.version}</version>
-		      <includes>**/*.exe</includes>
-		      <outputDirectory>${project.basedir}</outputDirectory>
-		    </artifactItem>
-		  </artifactItems>
-		</configuration>
-	      </execution>
-	    </executions>
-	  </plugin>
-	</plugins>
-      </build>
-    </profile>
   </profiles>
   <dependencies>
+    <dependency>
+      <groupId>BIDMach</groupId>
+      <artifactId>BIDMachRL-natives</artifactId>
+      <version>${nativeVersion}</version>
+      <classifier>cpu-${osarch}</classifier>
+    </dependency>
     <dependency>
       <groupId>BIDMach</groupId>
       <artifactId>BIDMach</artifactId>
@@ -257,8 +185,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.5.1</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
@@ -313,12 +241,6 @@
     <resources>
       <resource>
 	<directory>lib/</directory>
-	<excludes>
-	  <exclude>*</exclude>
-	</excludes>
-      </resource>
-      <resource>
-	<directory>cbin/</directory>
 	<excludes>
 	  <exclude>*</exclude>
 	</excludes>
